Add centos6 support to fb_apache
Reviewed By: davide125

Differential Revision: D3853692

fbshipit-source-id: 94bab482bd15ec865189b8f8363f08a0ee582be5

--- a/cookbooks/fb_apache/templates/default/fb_apache.conf.erb
+++ b/cookbooks/fb_apache/templates/default/fb_apache.conf.erb
@@ -1,3 +1,7 @@
 # This file is controlled by Chef, do not edit!
+<%  if node.centos6? %>
+<%=   render 'apache_modules.erb' %>
+
+<%  end %>
 <%= render 'apache_conf.erb',
         :variables => {:conf => node['fb_apache']['extra_configs']} %>
