fb_iptables: Fix dupe rules; output, and de-templatize
**Summary**:

The primary purpose of this PR was to fix the fact that reloading meant
some dynamic chains ended up with duplicates of their rules which
quickly spun out of control as the ruleset was duplicated and duplicated
over and over. In order to do that I ended up cleaning up a bunch of
stuff that had gone awry with this code since I last touched it.

* Fix the bug in question - add a space (" ") after the name of the
  chain in the grep so that we don't end up grabbing all the rules for
  FOO-BAR when we're looking for FOO. Or in this case, DOCKER-USER would
  get caught by DOCKER and thus be duplicated.

* The `fb_iptables_reload` script wasn't supposed to be a template, it
  was erroneously made into a template in https://github.com/facebook/chef-cookbooks/commit/80a8a3a5e2fbe8f603230c2aabc1abba06d73c57#diff-80bee50f4cf6d0af9c03f58ea0f9cd44
  and this undoes that. The script **has a templatized config file**!!
  @davide125 should great shame for approving that PR. =P
* Fix the bug where we don't clear the chain before we load it causing
  duplicate rules
* Make the output actually make sense
* Fix the bug where if one dynamic chain on a table wasn't populated, we
  skipped restoring any of them

Signed-off-by: Phil Dibowitz <phil@ipom.com>

**Test Plan**:

The output looks like:
```
root@host:/etc/default# /usr/sbin/fb_iptables_reload 4 reload
Reloading mangle...
  - Stashing dynamic chains on mangle: done.
  - Reloading mangle
  - Restoring dynamic chains on mangle: done.
Reloading filter...
  - Stashing dynamic chains on filter: DOCKER-USER  DOCKER-ISOLATION-STAGE-1  DOCKER  DOCKER-ISOLATION-STAGE-2  done.
  - Reloading filter
  - Restoring dynamic chains on filter: DOCKER-USER DOCKER-ISOLATION-STAGE-1 DOCKER DOCKER-ISOLATION-STAGE-2 done.
Reloading raw...
  - Stashing dynamic chains on raw: done.
  - Reloading raw
  - Restoring dynamic chains on raw: done.
```

* The rules are no longer duplicated

*

--- a/cookbooks/fb_iptables/templates/default/fb_iptables.conf.erb
+++ b/cookbooks/fb_iptables/templates/default/fb_iptables.conf.erb
@@ -1,6 +1,9 @@
 <% node['fb_iptables']['dynamic_chains'].to_hash.each do |table, chains| %>
 <%=  table.tr('a-z', 'A-Z') %>_CHAINS="<%= chains.keys.join(' ') %>"
 <% end %>
+CONFIG_DIR="<%= @iptables_config_dir %>"
+RULES_FILE="<%= @iptables_rules_file %>"
+RULES6_FILE="<%= @ip6tables_rules_file %>"
 TABLES="<%= FB::Iptables::TABLES_AND_CHAINS.keys.join(' ') %>"
 <%
   FB::Iptables::TABLES_AND_CHAINS.each do |table, chains|
