Fix fb_logrotate craziness
In
https://github.com/facebook/chef-cookbooks/commit/c5104612bf77d35474cff57e4c85ca000d848f53,
@malmond made the faulty claim that `whyrun_safe_ruby_block` was
dangerous, but he misunderstood chef ordering. It's the very very last
thing before the template (except the validator), and no one can
possibly schedule things after it, but before the template. It's the
whole reason why `whyrun_safe_ruby_block` exists.

Further, debugging templates is difficult. And logic doesn't belong in
templates. And certainly not munging of configs.

This moves the logic back to where it belongs, being careful to also
keep the logic fixes from that PR.

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/cookbooks/fb_logrotate/templates/default/fb_logrotate.conf.erb
+++ b/cookbooks/fb_logrotate/templates/default/fb_logrotate.conf.erb
@@ -25,42 +25,11 @@ size  <%= node['fb_logrotate']['globals']['size'] %>
 compressext <%= node['fb_logrotate']['globals']['compressext'] %>
 <% end -%>
 
-<% node['fb_logrotate']['configs'].to_hash.each do |name, block|
-  time = nil
-  if block['overrides']
-    rotation = block['overrides']['rotation']
-    size = block['overrides']['size']
-    if rotation
-      if size
-        fail "fb_logrotate:[#{name}]: you can only use size or rotation not both"
-      end
-      if rotation == 'weekly' && !block['overrides']['rotate']
-         block['overrides']['rotate'] = '4'
-      end
-      if %w{hourly daily weekly monthly yearly}.include?(rotation)
-        time = rotation
-        block['overrides'].delete('rotation')
-      else
-        fail "fb_logrotate:[#{name}]: rotation #{rotation} invalid"
-      end
-    end
-    if size
-      time = "size #{size}"
-      block['overrides'].delete('size')
-    end      
-    if time == defaultrotation
-      time = nil
-    end
-    if block['overrides']['nocompress'] &&
-      node['fb_logrotate']['globals']['nocompress']
-      # redundant, remove.
-      block['overrides'].delete('nocompress')
-    end
-  end -%>
+<% node['fb_logrotate']['configs'].to_hash.each do |name, block| %>
 ## fb.fb_logrotate.configs.<%= name %>
 <%=  block['files'].join(' ') %> {
-<%   if time -%>
-  <%= time %>
+<%   if block['time'] -%>
+  <%=  block['time'] %>
 <%   end -%>
 <%   if block['overrides'] -%>
 <%     block['overrides'].keys.sort.each do |k| -%>
