fb_apt: Significant updates
* Deprecate `node['fb_apt']['repos']` which was always a bad API
  (sorry), and replace it with `node['fb_apt']['sources']` which
  integrates nicely with the new `node['fb_apt']['keymap']`
* Deprecate `node['fb_apt']['keys']` which was very broken on modern
  apt and replace it with a new `node['fb_apt']['keymap']`
* Update syntax for security and update repos on modern debian and
  ubuntu
* Remove old Ubuntu 16 cruft
* Lots of cleanups and refactoring for readability

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/cookbooks/fb_apt/templates/default/sources.list.erb
+++ b/cookbooks/fb_apt/templates/default/sources.list.erb
@@ -1,6 +1,14 @@
 # This file is maintained by Chef. Do not edit, all changes will be
 # overwritten. See fb_apt/README.md
 
-<% node['fb_apt']['repos'].each do |repo| -%>
-<%=  repo %>
-<% end -%>
+<% node['fb_apt']['sources'].each do |name, config| %>
+# <%= name %>
+<%=  FB::Apt.gen_sources_line(config) %>
+<% end %>
+<% unless node['fb_apt']['repos'].empty? %>
+# Repos from the legacy node['fb_apt']['repos'] - please migrate
+# these to node['fb_apt']['sources']
+<%   node['fb_apt']['repos'].each do |repo| %>
+<%=    repo %>
+<%   end %>
+<% end %>
