fb_collectd: Fix various problems
* Most configs are not possible with existing code as it quotes strings
  that collectd won't accept quoted
* Add support for Load configurations
* Fix 'global' vs 'globals' in docs
* Add more docs

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/cookbooks/fb_collectd/templates/default/collectd.conf.erb
+++ b/cookbooks/fb_collectd/templates/default/collectd.conf.erb
@@ -7,10 +7,19 @@
 <% end -%>
 
 <% config['plugins'].each do |plugin, config| -%>
+<%   if config && config['_load_config'] %>
+<LoadPlugin <%= plugin %>>
+<%     config['_load_config'].each do |key, val| %>
+<%=      FB::Collectd._gen_collectd_conf_entry(key, val, 1) %>
+<%     end %>
+</LoadPlugin>
+<%   else %>
 LoadPlugin <%= plugin %>
+<%   end %>
 <%   if config -%>
 <Plugin <%= plugin %>>
 <%     config.each do |key, val| -%>
+<%       next if key == '_load_config' %>
 <%=      FB::Collectd._gen_collectd_conf_entry(key, val, 2) %>
 <%     end -%>
 </Plugin>
