--- a/cookbooks/fb_logrotate/templates/default/logrotate.timer.erb
+++ b/cookbooks/fb_logrotate/templates/default/logrotate.timer.erb
@@ -5,6 +5,7 @@ Documentation=man:logrotate(8) man:logrotate.conf(5)
 [Timer]
 OnCalendar=<%= node['fb_logrotate']['systemd_settings']['OnCalendar'] %>
 RandomizedDelaySec=<%= node['fb_logrotate']['systemd_settings']['RandomizedDelaySec'] %>
+Persistent=<%= node['fb_logrotate']['systemd_settings']['Persistent'] %>
 
 [Install]
 WantedBy=timers.target
