fb_postfix: fix custom_headers when ignoring headers
There's a variety of situations in `custom_headers` where the second
two fields are not supposed to be there. This current code assumes
they are always there and thus insert an errant colon which is invalid.

This checks those last values are there before adding them.

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/cookbooks/fb_postfix/templates/default/custom_headers.regexp.erb
+++ b/cookbooks/fb_postfix/templates/default/custom_headers.regexp.erb
@@ -4,6 +4,10 @@
 <% custom_headers = node['fb_postfix']['custom_headers'].to_hash %>
 <% custom_headers.keys.sort.each do |name| %>
 <%   hdr = node['fb_postfix']['custom_headers'][name] %>
+<%   line = "#{hdr['regexp']} #{hdr['action']}" %>
+<%   if hdr['header'] %>
+<%     line += " #{hdr['header']}: #{hdr['value']}" %>
+<%   end %>
 # Name: <%= name %>
-<%=  hdr['regexp'] %> <%= hdr['action'] %> <%= hdr['header'] %>: <%= hdr['value'] %>
+<%=  line %>
 <% end %>
